# fastapi-uv

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: app.py
