[project]
name = "uv-test"
version = "0.1.0"
description = "test project for uv"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.2",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.12.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
    "ruff>=0.7.0",
]
